# zkeditor

./: .gitmodules  README.md
img-editor/: .env.example  Cargo.toml
img-editor/api/: Cargo.toml  README.md
img-editor/api/src/: handlers.rs  main.rs  types.rs  utils.rs
img-editor/lib/: Cargo.toml
img-editor/lib/src/: layers.rs  lib.rs  project.rs  transformations.rs  wasm.rs
img-editor/program/: Cargo.toml
img-editor/program/src/: main.rs
img-editor/script/: Cargo.toml  build.rs  output.json
img-editor/src/: layers.rs  lib.rs  project.rs  transformations.rs  wasm.rs
img-editor/verifier/: .env.example  .gitignore  README.md  foundry.toml
img-editor/verifier/script/: Deploy.s.sol  Verify.s.sol  output.json
img-editor/verifier/src/: ImageVerifier.sol
img-editor/verifier/test/: ImageVerifier.t.sol
sp1/: Cargo.toml
sp1/api/: Cargo.toml
sp1/api/src/: main.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml  output.json  proof.hex  verification_key.hex
ui/: bun.lockb  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proofs.db  tailwind.config.ts
ui/ABIs/: ImageVerifier.ts
ui/app/: layout.tsx  page.tsx
ui/app/api/proofs/: route.ts
ui/app/api/proofs/[id]/: route.ts
ui/app/api/proofs/by-hash/: route.ts
ui/app/api/proofs/update-tx/: route.ts
ui/app/editor/: layout.tsx  page.tsx
ui/app/gallery/: layout.tsx  page.tsx
ui/app/gallery/[id]/: page.tsx
ui/components/: ConnectButton.tsx  ContextMenu.tsx  GalleryGrid.tsx  ImageCanvas.tsx  ImageEditor.tsx  ImageLineage.tsx  InfoModal.tsx  LayersPanel.tsx  Navbar.tsx  ProofModal.tsx  Rulers.tsx  SelectionRect.tsx  TextOverlayControls.tsx  Toast.tsx  TransformPanel.tsx  TransformationHistory.tsx  UploadModal.tsx
ui/config/: index.tsx
ui/contexts/: TabsContext.tsx  ToastContext.tsx  index.tsx
ui/hooks/: useImageEditor.ts
ui/lib/: blockchain-service.ts  database-service.ts  ipfs-service.ts  proof-service.ts  wasm-loader.ts
ui/pages/api/proofs/: index.ts  list.ts  update-tx.ts
ui/public/: responseTemplate.json  responseTemplate2.json
ui/src/wasm/: img_editor_lib.d.ts  img_editor_lib.js  img_editor_lib_bg.wasm  img_editor_lib_bg.wasm.d.ts  package.json
ui/types/: transformations.ts
