[package]
name = "img-editor-lib"
version = "0.1.0"
edition = "2021"

[lib]
# Only use cdylib for wasm32 target
crate-type = ["lib", "cdylib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = { version = "0.23", default-features = false }
serde = { version = "1.0", features = ["derive"] }
ab_glyph = { version = "0.2", default-features = false, features = ["std"] }
ttf-parser = { version = "0.25", features = ["std"] }
getrandom = { version = "0.1", features = ["dummy"] }
serde_bytes = "0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libm = "0.2"