[workspace]
members = [
    "api",
    "program",
    "script",
    "lib"
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
img-editor-lib = { path = "lib" }
image = { version = "0.24.8", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = { version = "0.23.0", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
ttf-parser = { version = "0.20.0", features = ["std"] }
getrandom = { version = "0.1.16", features = ["dummy"] }
serde_bytes = "0.11.14"
rusttype = "0.9.3"
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.6.3"
axum = { version = "0.7.4", features = ["multipart", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
serde_json = "1.0.114"
sp1-sdk = "4.0.0"
dotenv = "0.15.0"
hex = "0.4.3"
reqwest = { version = "0.11.24", features = ["json"] }
sp1-zkvm = "4.0.0"
sp1-derive = "4.0.0"
sp1-build = "4.0.0"
