[package]
name = "img-editor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp1-sdk = { workspace = true }
img-editor-lib = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }