[package]
name = "img-editor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "json"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
sp1-sdk = "4.0"
dotenv = "0.15"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
img-editor-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[build-dependencies]
sp1-build = { workspace = true }