[package]
name = "img-editor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
img-editor-lib = { workspace = true }
hex = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"

[build-dependencies]
sp1-build = { workspace = true }