[package]
name = "img-editor-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
imageproc = { version = "0.23", default-features = false }
serde = { version = "1.0", features = ["derive"] }
ttf-parser = { version = "0.25", features = ["std"] }
getrandom = { version = "0.1", features = ["dummy"] }
serde_bytes = "0.11"
rusttype = "0.9"