[package]
name = "img-editor-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { workspace = true }
img-editor-lib = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
sp1-derive = { workspace = true }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
