[package]
version = "0.1.0"
name = "img-editor-script"
edition = "2021"
default-run = "img-editor"

[[bin]]
name = "img-editor"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { workspace = true }
img-editor-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenv = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
sha2 = { version = "0.10", default-features = false }
tracing = "0.1.40"
alloy-sol-types = { workspace = true }

[build-dependencies]
sp1-build = "4.0.0"
