[package]
name = "img-editor-script"
version = "0.1.0"
edition = "2021"

[dependencies]
img-editor-lib = { workspace = true }
sp1-sdk = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = { version = "0.10", default-features = false }
dotenv = "0.15"
bincode = "1.3"
image = "0.24"

[build-dependencies]
sp1-build = "4.0.0"
